# dualarm_mobile_planner

./: CMakeLists.txt  README.md  package.xml
launch/: teb_local_planner.launch
maps/: maze1.pgm  maze1.yaml
params/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
scripts/: actor_net.py  ddpg.py
scripts/weights/actor/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
scripts/weights/critic/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
