<?xml version="1.0"?>
<package>
  <name>dualarm_mobile_planner</name>
  <version>0.0.1</version>
  <description>robot path planning package</description>

  <license>GPLv3</license>

  <author email="lim.yonsei@gmail.com">Jaehyun Lim</author>

  <maintainer email="lim.yonsei@gmail.com">Jaehyun Lim</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>teb_local_planner</run_depend>

</package>
